--- a/src/application.properties
+++ b/src/application.properties
@@ -1,6 +1,6 @@
 # data source
-spring.datasource.driver-class-name=com.postgresql.jdbc.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/project?useSSL=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=secret
 
